Исправленна ошибка запуска приложения

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.ZhMatuale"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ZhMatuale">
+            android:theme="@style/Theme.ZhMatuale"
+            android:name="com.example.zh_matuale.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
